@@ -1,7 +1,7 @@
 ﻿//------------------------------------------------------------------------------
 // <auto-generated>
 //     This code was generated by a tool.
-//     Runtime Version:2.0.50727.3074
+//     Runtime Version:2.0.50727.4016
 //
 //     Changes to this file may cause incorrect behavior and will be lost if
 //     the code is regenerated.
@@ -1474,6 +1474,18 @@ namespace ProcessHacker.Properties {
             }
             set {
                 this["InformationBoxSize"] = value;
+            }
+        }
+        
+        [global::System.Configuration.UserScopedSettingAttribute()]
+        [global::System.Diagnostics.DebuggerNonUserCodeAttribute()]
+        [global::System.Configuration.DefaultSettingValueAttribute("False")]
+        public bool ScrollDownProcessTree {
+            get {
+                return ((bool)(this["ScrollDownProcessTree"]));
+            }
+            set {
+                this["ScrollDownProcessTree"] = value;
             }
         }
     }
