@@ -370,6 +370,9 @@
             <setting name="InformationBoxSize" serializeAs="String">
                 <value>565, 377</value>
             </setting>
+            <setting name="ScrollDownProcessTree" serializeAs="String">
+                <value>False</value>
+            </setting>
         </ProcessHacker.Properties.Settings>
     </userSettings>
 </configuration>
